--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -13,7 +13,7 @@
             <img src="/Transremont/Segunda Opcion/IMG/Grupo Transremontlogo.webp" alt="Logo" class="logo-img">
         </div>
         <ul class="menu navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="/Transremont/Segunda Opcion/Index.html">Menú Principal</a></li>
+            <li class="nav-item"><a class="nav-link" href="/Transremont/Segunda Opcion/index.html">Menú Principal</a></li>
         </ul>
     </section>
     <section class="formas-trabajo">
